Moved files around

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coding Quizzz</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./Deploy/style.css">
    
 </head>
 <body>
@@ -23,6 +23,6 @@
     <button id="submit">Submit Quiz</button>
     <section id="results">Results</section>
 
-    <script src="./script.js"></script>
+    <script src="./Deploy/script.js"></script>
 </body>
 </html>
