Edited the JS file. Added if statements to make elements dissapear after clicking

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <section class="infoBox">
         <div class="infoTitle">
             <span>
-                <h3>Sone rules of this quiz include:</h3>  
+                <h3>Some rules of this quiz include:</h3>  
                 <p> The timer will start when the "Start Quiz" button is pressed. Yu will be presented with the first question right after. Once you select an answer, you will be directed to the next question until the end of the quiz. 
                 <p>If you anwswer a question incorrectly, then the time will be substracted from the clock.</p>
                 <p>The quiz will end when all questions are answered or the timer reaches 0</p>
@@ -41,6 +41,7 @@
     
     <br><br><br><br>
 
+    <!-- container for the questions and answers -->
     <main class="container">
         <section id="questionContainer" class="hide">
             <div id="question">Question</div>
