--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
         <div id="questionContainer" class="hide">
             <div id="question">Question</div>
             <div id="answer-buttons" class="btn-grid" >
-                <button class="btn">A</button>
-                <button class="btn">B</button>
-                <button class="btn">C</button>
-                <button class="btn">D</button>
+                <button class="btn AnsBtn">A</button>
+                <button class="btn AnsBtn">B</button>
+                <button class="btn AnsBtn">C</button>
+                <button class="btn AnsBtn">D</button>
             </div>
 
             
