--- a/index2.html
+++ b/index2.html
@@ -11,7 +11,7 @@
     <!-- this is the results section -->
  
     <section id="results" class="finalScore">
-        <h2 class="">Highscores</h2>
+        <h2>Highscores</h2>
         <button id="clear">Clear Highscores</button>
         <button id="goBack">
             <a class="nav-link disabled" href="index.html">Go Back</a>
