--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coding Quiz</title>
+    <!-- style css -->
     <link rel="stylesheet" href="./Deploy/style.css">
-    <link rel="stylesheet" href="index2.html">
+    <!-- highscores html -->
+    <link rel="stylesheet" href="highscores.html">
 
 
 </head>
@@ -75,11 +77,11 @@
         </div>
         <form action="/action_page.php" id="initials">
             <label for="fname">Enter Initials:</label>
-            <input type="text" id="fname" name="fname" value="">
+            <input class="initials" type="text" id="fname" name="fname" value="">
         </form>
         <section class="finalScore2">
             <button id="submit" class="hide">
-                <a class="nav-link disabled" href="index2.html">Submit Quiz</a>
+                <a class="nav-link disabled" href="highscores.html">Submit Quiz</a>
             </button>
         </section>
     </section>
@@ -87,8 +89,8 @@
 
 
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="./Deploy/script.js"></script>
 
-<script src="./Deploy/script.js"></script>
 </body>
-
 </html>
