readed event listener code

--- a/highscores.html
+++ b/highscores.html
@@ -6,7 +6,7 @@
     <title>High Scores</title>
     <!-- style sheet css -->
     <link rel="stylesheet" href="./Deploy/style.css">
-    <link href="highscores.html">
+    <link href="index.html">
 </head>
 <body>
     <!-- this is the results section -->
