--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- style css -->
     <link rel="stylesheet" href="./Deploy/style.css">
     <!-- highscores html -->
-    <link rel="stylesheet" href="highscores.html">
+    <link href="highscores.html">
 
 
 </head>
